appId: com.pajk.idpersonaldoc.staging
---
- clearState
- launchApp
- assertVisible: "Masuk"
- tapOn: "Masuk"
- assertVisible: "Masukkan Nomor Telepon"
- tapOn: "Masukkan Nomor Telepon"
- inputText: "88880005555"
- tapOn: "Lanjutkan"
- inputText: "0000"
- tapOn: "Kirim"
- assertVisible: "Konsultasi Dengan Dokter Kami"
- tapOn: "Chat Dokter Umum"
- scrollUntilVisible:
    element: "dr. Reza Alaydrus"
    direction: DOWN
- tapOn: "dr. Reza Alaydrus"
- assertVisible: "dr. Reza Alaydrus"
- tapOn: "Chat Sekarang"
- assertVisible: "dr. Reza Alaydrus"
- tapOn: "Lanjut"
- assertVisible: "Metode Pembayaran"
- tapOn:
    text: "Pilih"
    index: 1
- assertVisible: "BCA VA"
- tapOn: "BCA VA"
- tapOn: "Konfirmasi"
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible: "Detail Pembayaran"
- tapOn: "Konfirmasi"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "back"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "Beranda"
