url: ---
---
- launchApp
- assertVisible: Select Your Login Method
- tapOn:
    text: "Login with SSO"
- assertVisible: "Email, phone, or Skype"
- tapOn: "Email, phone, or Skype"
- inputText:
    text: "xxxxxx"
- tapOn: Next
- assertVisible: Password
- inputText:
    text: "xxxxx"
- tapOn: Sign in
- tapOn:
    text: "Yes"
- assertVisible: Members
- tapOn: "Search Member Code"
- inputText: "AutomationTest01"
- tapOn: "1686077"

# - tapOn:
#     below: "Action"
#     index: 0
# - assertVisible: "Unlink"
# - tapOn: "Unlink"
# - waitForAnimationToEnd:
#     timeout: 5000
